--- a/index.html
+++ b/index.html
@@ -22,183 +22,183 @@
                 <a href="#" id="inscription"><strong>S'inscrire</strong></a>
             </div>
     </header>
-
-    <!-- Section 1 -->
-    <section>
-        <div class="container">
-            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-            <p>En plein centre ville ou en pleine nature</p>
-            <div id="recherche">
-                <form method="post" action="#">
-                        <label for="localisation" class="gps"><i class="fas fa-map-marker-alt"></i></label><input type="search" name="localisation" id="localisation" placeholder="Marseille, France" /><input type="button" class="btn" value="Rechercher" /><button name="bouton"><i class="fas fa-search"></i></button>
-                </form>
+    <main>
+<!-- Section 1 -->
+        <section>
+            <div class="container">
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre ville ou en pleine nature</p>
+                <div id="recherche">
+                    <form method="post" action="#">
+                            <label for="localisation" class="gps"><i class="fas fa-map-marker-alt"></i></label><input type="search" name="localisation" id="localisation" placeholder="Marseille, France" /><input type="button" class="btn" value="Rechercher" /><button name="bouton"><i class="fas fa-search"></i></button>
+                    </form>
+                </div>
+                <div id="filtres">
+                    <h3>Filtres </h3>
+                    <div class="mesFiltres">
+                        <i class="fas fa-money-bill-wave"></i><p>   Économique   </p>
+                    </div>
+                    <div class="mesFiltres">
+                        <i class="fas fa-child"></i><p>Familial</p>
+                    </div>
+                    <div class="mesFiltres">
+                        <i class="fas fa-heart"></i><p>Romantique</p>
+                    </div>
+                    <div class="mesFiltres">
+                        <i class="fas fa-dog"></i><p>Animaux autorisés</p>
+                    </div>
+                </div>
+                <div id="info">
+                    <i class="fas fa-info"></i><p>Plus de 500 logements sont disponibles dans cette ville </p>
+                </div>
             </div>
-            <div id="filtres">
-                <h3>Filtres </h3>
-                <div class="mesFiltres">
-                    <i class="fas fa-money-bill-wave"></i><p>   Économique   </p>
-                </div>
-                <div class="mesFiltres">
-                    <i class="fas fa-child"></i><p>Familial</p>
-                </div>
-                <div class="mesFiltres">
-                    <i class="fas fa-heart"></i><p>Romantique</p>
-                </div>
-                <div class="mesFiltres">
-                    <i class="fas fa-dog"></i><p>Animaux autorisés</p>
-                </div>
-
-            </div>
-            <div id="info">
-                <i class="fas fa-info"></i><p>Plus de 500 logements sont disponibles dans cette ville </p>
-            </div>
-        </div>
-    </section>
+        </section>
 <!-- Section 2 -->
-<section class="containerHebPop">
-    <div class="containerHeb">
-        <h2 id="titreHeb">Hébergements à Marseille</h2>
-        <div id="hebergements"> 
-            <div class="vignettesHeb">
-                <a href="#">
-                    <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière">
-                    <h3>Auberge de la Cannebière</h3>
-                    <p>Nuit à partir de <strong>25€</strong></p>
-                    <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
-                </a>
-            </div>
-            <div class="vignettesHeb">
-                <a href="#">
-                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel du port">
-                    <h3>Hôtel du port</h3>
-                    <p>Nuit à partir de 52<strong>€</strong></p>
-                    <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                </a>
-            </div>
-            <div class="vignettesHeb">
-                <a href="#">
-                    <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hotel Les mouettes">
-                    <h3>Hôtel Les mouettes</h3>
-                    <p>Nuit à partir de 76<strong>€</strong></p>
-                    <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
-                </a>
-            </div>
-            <div class="vignettesHeb">
-                <a href="#">
-                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hotel de la mer">
-                    <h3>Hôtel de la mer</h3>
-                    <p>Nuit à partir de 46<strong>€</strong></p>
-                    <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></div>
-                </a>
-            </div>
-            <div class="vignettesHeb">
-                <a href="#">
-                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
-                    <h3>Auberge Le Panier</h3>
-                    <p>Nuit à partir de <strong>23€</strong></p>
-                    <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
-                </a>
-            </div>
-            <div class="vignettesHeb">
-                <a href="#">
-                    <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
-                    <h3>Hôtel chez Amina</h3>
-                    <p>Nuit à partir de 96<strong>€</strong></p>
-                    <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                </a>
-            </div> 
-        </div>
-        <div id="more"><a href="#">Afficher plus</a></div>
-    </div>
-    <aside class="containerPop">
-        <div id="titrePop"> 
-            <h2>Les plus populaires</h2>
-            <i class="fas fa-chart-line"></i>
-        </div>
-        <div id="populaires">
-            <div class="vignettesPop">
-                <a href="#">
-                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
-                    <div class="textePop">
-                        <h3>Hôtel Le soleil du matin</h3>
-                        <p>Nuit à partir de 128<strong>€</strong></p>
-                        <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+        <section class="containerHebPop">
+            <div class="containerHeb">
+                <h2 id="titreHeb">Hébergements à Marseille</h2>
+                <div id="hebergements"> 
+                    <div class="vignettesHeb">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière">
+                            <h3>Auberge de la Cannebière</h3>
+                            <p>Nuit à partir de <strong>25€</strong></p>
+                            <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+                        </a>
                     </div>
-                </a>
-            </div>
-            <div class="vignettesPop">
-                <a href="#">
-                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau">
-                    <div class="textePop">
-                        <h3>Au coeur de l'eau Chambres d'hotes</h3>
-                        <p>Nuit à partir de 71<strong>€</strong></p>
-                        <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+                    <div class="vignettesHeb">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel du port">
+                            <h3>Hôtel du port</h3>
+                            <p>Nuit à partir de 52<strong>€</strong></p>
+                            <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                        </a>
                     </div>
-                </a>
-            </div>
-            <div class="vignettesPop">
-                <a href="#">
-                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et blanc">
-                    <div class="textePop">
-                        <h3>Hôtel Tout bleu et Blanc</h3>
-                        <p>Nuit à partir de 68<strong>€</strong></p>
-                        <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+                    <div class="vignettesHeb">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hotel Les mouettes">
+                            <h3>Hôtel Les mouettes</h3>
+                            <p>Nuit à partir de 76<strong>€</strong></p>
+                            <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+                        </a>
                     </div>
-                </a>
-            </div>    
-        </div>
-    </aside>
-</section>
+                    <div class="vignettesHeb">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hotel de la mer">
+                            <h3>Hôtel de la mer</h3>
+                            <p>Nuit à partir de 46<strong>€</strong></p>
+                            <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></div>
+                        </a>
+                    </div>
+                    <div class="vignettesHeb">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
+                            <h3>Auberge Le Panier</h3>
+                            <p>Nuit à partir de <strong>23€</strong></p>
+                            <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+                        </a>
+                    </div>
+                    <div class="vignettesHeb">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
+                            <h3>Hôtel chez Amina</h3>
+                            <p>Nuit à partir de 96<strong>€</strong></p>
+                            <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                        </a>
+                    </div> 
+                </div>
+                <div id="more"><a href="#">Afficher plus</a></div>
+            </div>
+            <aside class="containerPop">
+                <div id="titrePop"> 
+                    <h2>Les plus populaires</h2>
+                    <i class="fas fa-chart-line"></i>
+                </div>
+                <div id="populaires">
+                    <div class="vignettesPop">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
+                            <div class="textePop">
+                                <h3>Hôtel Le soleil du matin</h3>
+                                <p>Nuit à partir de 128<strong>€</strong></p>
+                                <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="vignettesPop">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau">
+                            <div class="textePop">
+                                <h3>Au coeur de l'eau Chambres d'hotes</h3>
+                                <p>Nuit à partir de 71<strong>€</strong></p>
+                                <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="vignettesPop">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et blanc">
+                            <div class="textePop">
+                                <h3>Hôtel Tout bleu et Blanc</h3>
+                                <p>Nuit à partir de 68<strong>€</strong></p>
+                                <div class="etoile"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+                            </div>
+                        </a>
+                    </div>    
+                </div>
+            </aside>
+        </section>
 <!-- Section 3-->
-    <section>
-        <h2 id="titreAct">Activités à Marseille</h2>
-        <div class="containerAct">
-            <div id="gauche">
-                <div id="imageSimpleGauche" class="vignettesAct">
-                    <a href="#">
-                        <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
-                        <h3>Vieux Port</h3>
-                    </a>  
-                </div>
-                <div id="imageDoubleGauche" >
-                    <div id="hautGauche" class="vignettesAct">
+        <section>
+            <h2 id="titreAct">Activités à Marseille</h2>
+            <div class="containerAct">
+                <div id="gauche">
+                    <div id="imageSimpleGauche" class="vignettesAct">
                         <a href="#">
-                            <img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
-                            <h3>Fort de Pomègues</h3>
+                            <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
+                            <h3>Vieux Port</h3>
                         </a>  
                     </div>
-                    <div id="basGauche" class="vignettesAct">
+                    <div id="imageDoubleGauche" >
+                        <div id="hautGauche" class="vignettesAct">
+                            <a href="#">
+                                <img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                                <h3>Fort de Pomègues</h3>
+                            </a>  
+                        </div>
+                        <div id="basGauche" class="vignettesAct">
+                            <a href="#">
+                                <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="îles du Frioul">
+                                <h3>Îles du Frioul</h3>
+                            </a>  
+                        </div>
+                    </div>
+                </div>
+                <div id="droite">
+                    <div id="imageSimpleDroite" class="vignettesAct">
                         <a href="#">
-                            <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="îles du Frioul">
-                            <h3>Îles du Frioul</h3>
+                            <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des calanques">
+                            <h3>Parc National des Calanques</h3>
                         </a>  
+                    </div>
+                    <div id="imageDoubleDroite">
+                        <div id="hautDroite" class="vignettesAct">
+                            <a href="#">
+                                <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                                <h3>Notre-Dame-de-la-Garde</h3>
+                            </a>  
+                        </div>
+                        <div id="basDroite" class="vignettesAct">
+                            <a href="#">
+                                <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
+                                <h3>Parc Longchamp</h3>
+                            </a>  
+                        </div>
                     </div>
                 </div>
             </div>
-            <div id="droite">
-                <div id="imageSimpleDroite" class="vignettesAct">
-                    <a href="#">
-                        <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des calanques">
-                        <h3>Parc National des Calanques</h3>
-                    </a>  
-                </div>
-                <div id="imageDoubleDroite">
-                    <div id="hautDroite" class="vignettesAct">
-                        <a href="#">
-                            <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
-                            <h3>Notre-Dame-de-la-Garde</h3>
-                        </a>  
-                    </div>
-                    <div id="basDroite" class="vignettesAct">
-                        <a href="#">
-                            <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
-                            <h3>Parc Longchamp</h3>
-                        </a>  
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
 <!-- Footer -->
     <footer>
         <div id="aPropos">
